{
  "version": 4,
  "terraform_version": "1.15.4",
  "serial": 49,
  "lineage": "7a640afd-5b23-85f3-ea35-b885a87888f6",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "demo-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:836550977735:internet-gateway/igw-09915673a2e3ee89e",
            "id": "igw-09915673a2e3ee89e",
            "owner_id": "836550977735",
            "region": "ca-central-1",
            "tags": {
              "Name": "demo-igw"
            },
            "tags_all": {
              "Name": "demo-igw"
            },
            "vpc_id": "vpc-09df53101262eeae1"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "836550977735",
            "id": "igw-09915673a2e3ee89e",
            "region": "ca-central-1"
          },
          "dependencies": [
            "aws_vpc.demo-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "demo-alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ca-central-1:836550977735:loadbalancer/app/demo-alb/46b7639ed2e713c7",
            "arn_suffix": "app/demo-alb/46b7639ed2e713c7",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "demo-alb-162220546.ca-central-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "health_check_logs": [
              {
                "enabled": false
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ca-central-1:836550977735:loadbalancer/app/demo-alb/46b7639ed2e713c7",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "demo-alb",
            "preserve_host_header": false,
            "region": "ca-central-1",
            "security_groups": [
              "sg-00dbbd8b1723d53de"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0129b8d2d2f6d7729"
              },
              {
                "subnet_id": "subnet-0d142f038b65d1e90"
              }
            ],
            "subnets": [
              "subnet-0129b8d2d2f6d7729",
              "subnet-0d142f038b65d1e90"
            ],
            "tags": {
              "Name": "demo-alb"
            },
            "tags_all": {
              "Name": "demo-alb"
            },
            "vpc_id": "vpc-09df53101262eeae1",
            "xff_header_processing_mode": "append",
            "zone_id": "ZQSVJUPU6J1EY"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:ca-central-1:836550977735:loadbalancer/app/demo-alb/46b7639ed2e713c7"
          },
          "dependencies": [
            "aws_security_group.alb-sg",
            "aws_subnet.public-alb-sn1",
            "aws_subnet.public-alb-sn2",
            "aws_vpc.demo-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "demo-listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ca-central-1:836550977735:listener/app/demo-alb/46b7639ed2e713c7/160036851b8c4ad2",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "jwt_validation": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ca-central-1:836550977735:targetgroup/alb-tg/e722e7369b1ee3d1",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ca-central-1:836550977735:listener/app/demo-alb/46b7639ed2e713c7/160036851b8c4ad2",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ca-central-1:836550977735:loadbalancer/app/demo-alb/46b7639ed2e713c7",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "region": "ca-central-1",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:ca-central-1:836550977735:listener/app/demo-alb/46b7639ed2e713c7/160036851b8c4ad2"
          },
          "dependencies": [
            "aws_lb.demo-alb",
            "aws_lb_target_group.demo-tg",
            "aws_security_group.alb-sg",
            "aws_subnet.public-alb-sn1",
            "aws_subnet.public-alb-sn2",
            "aws_vpc.demo-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "demo-tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ca-central-1:836550977735:targetgroup/alb-tg/e722e7369b1ee3d1",
            "arn_suffix": "targetgroup/alb-tg/e722e7369b1ee3d1",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ca-central-1:836550977735:targetgroup/alb-tg/e722e7369b1ee3d1",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:ca-central-1:836550977735:loadbalancer/app/demo-alb/46b7639ed2e713c7"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "alb-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "ca-central-1",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "demo-tg"
            },
            "tags_all": {
              "Name": "demo-tg"
            },
            "target_control_port": 0,
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-09df53101262eeae1"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:ca-central-1:836550977735:targetgroup/alb-tg/e722e7369b1ee3d1"
          },
          "dependencies": [
            "aws_vpc.demo-vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "demo-nat-gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_provision_zones": "enabled",
            "auto_scaling_ips": "enabled",
            "availability_mode": "regional",
            "connectivity_type": "public",
            "id": "nat-1228cfedd1d226e25",
            "region": "ca-central-1",
            "regional_nat_gateway_address": [
              {
                "availability_zone": "ca-central-1a",
                "availability_zone_id": "cac1-az1",
                "status": "associating"
              },
              {
                "allocation_id": "eipalloc-01715ed8d9857a53a",
                "association_id": "eipassoc-04326c8df36798f99",
                "availability_zone": "ca-central-1b",
                "availability_zone_id": "cac1-az2",
                "public_ip": "3.97.169.251",
                "status": "succeeded"
              }
            ],
            "regional_nat_gateway_auto_mode": "enabled",
            "route_table_id": "rtb-06182784e9044981a",
            "tags": {
              "Name": "demo-regionalnat-gw"
            },
            "tags_all": {
              "Name": "demo-regionalnat-gw"
            },
            "vpc_id": "vpc-09df53101262eeae1"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "836550977735",
            "id": "nat-1228cfedd1d226e25",
            "region": "ca-central-1"
          },
          "dependencies": [
            "aws_vpc.demo-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "demo-private-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:836550977735:route-table/rtb-0069410c0cd5e31f6",
            "id": "rtb-0069410c0cd5e31f6",
            "owner_id": "836550977735",
            "propagating_vgws": [],
            "region": "ca-central-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-1228cfedd1d226e25",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "demo-private-rt"
            },
            "tags_all": {
              "Name": "demo-private-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-09df53101262eeae1"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "836550977735",
            "id": "rtb-0069410c0cd5e31f6",
            "region": "ca-central-1"
          },
          "dependencies": [
            "aws_nat_gateway.demo-nat-gw",
            "aws_vpc.demo-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "demo-public-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:836550977735:route-table/rtb-00a8bfebe6121cb7a",
            "id": "rtb-00a8bfebe6121cb7a",
            "owner_id": "836550977735",
            "propagating_vgws": [],
            "region": "ca-central-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-09915673a2e3ee89e",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "demo-public-rt"
            },
            "tags_all": {
              "Name": "demo-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-09df53101262eeae1"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "836550977735",
            "id": "rtb-00a8bfebe6121cb7a",
            "region": "ca-central-1"
          },
          "dependencies": [
            "aws_internet_gateway.demo-igw",
            "aws_vpc.demo-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt-association-private-app-sn1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-071392b30168dffed",
            "region": "ca-central-1",
            "route_table_id": "rtb-0069410c0cd5e31f6",
            "subnet_id": "subnet-0174e1d9d9d55acd0"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "836550977735",
            "id": "rtbassoc-071392b30168dffed",
            "region": "ca-central-1"
          },
          "dependencies": [
            "aws_nat_gateway.demo-nat-gw",
            "aws_route_table.demo-private-rt",
            "aws_subnet.private-app-sn1",
            "aws_vpc.demo-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt-association-private-app-sn2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03d64de731d9fd912",
            "region": "ca-central-1",
            "route_table_id": "rtb-0069410c0cd5e31f6",
            "subnet_id": "subnet-0589cf4d164c7dd9b"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "836550977735",
            "id": "rtbassoc-03d64de731d9fd912",
            "region": "ca-central-1"
          },
          "dependencies": [
            "aws_nat_gateway.demo-nat-gw",
            "aws_route_table.demo-private-rt",
            "aws_subnet.private-app-sn2",
            "aws_vpc.demo-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt-association-private-db-sn1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0046b1fdb4881cad3",
            "region": "ca-central-1",
            "route_table_id": "rtb-0069410c0cd5e31f6",
            "subnet_id": "subnet-02cc14396fe6e4fad"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "836550977735",
            "id": "rtbassoc-0046b1fdb4881cad3",
            "region": "ca-central-1"
          },
          "dependencies": [
            "aws_nat_gateway.demo-nat-gw",
            "aws_route_table.demo-private-rt",
            "aws_subnet.private-db-sn1",
            "aws_vpc.demo-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt-association-private-db-sn2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04bbe23e95199c6dd",
            "region": "ca-central-1",
            "route_table_id": "rtb-0069410c0cd5e31f6",
            "subnet_id": "subnet-073dd4d56f3b6378f"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "836550977735",
            "id": "rtbassoc-04bbe23e95199c6dd",
            "region": "ca-central-1"
          },
          "dependencies": [
            "aws_nat_gateway.demo-nat-gw",
            "aws_route_table.demo-private-rt",
            "aws_subnet.private-db-sn2",
            "aws_vpc.demo-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt-association-public-alb-sn1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0783093147302f4c6",
            "region": "ca-central-1",
            "route_table_id": "rtb-00a8bfebe6121cb7a",
            "subnet_id": "subnet-0129b8d2d2f6d7729"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "836550977735",
            "id": "rtbassoc-0783093147302f4c6",
            "region": "ca-central-1"
          },
          "dependencies": [
            "aws_internet_gateway.demo-igw",
            "aws_route_table.demo-public-rt",
            "aws_subnet.public-alb-sn1",
            "aws_vpc.demo-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt-association-public-alb-sn2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-041f515317989f4ad",
            "region": "ca-central-1",
            "route_table_id": "rtb-00a8bfebe6121cb7a",
            "subnet_id": "subnet-0d142f038b65d1e90"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "836550977735",
            "id": "rtbassoc-041f515317989f4ad",
            "region": "ca-central-1"
          },
          "dependencies": [
            "aws_internet_gateway.demo-igw",
            "aws_route_table.demo-public-rt",
            "aws_subnet.public-alb-sn2",
            "aws_vpc.demo-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:836550977735:security-group/sg-00dbbd8b1723d53de",
            "description": "Security group for ALB allowing HTTP traffic and allowing all outbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00dbbd8b1723d53de",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "alb-sg",
            "name_prefix": "",
            "owner_id": "836550977735",
            "region": "ca-central-1",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-09df53101262eeae1"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "836550977735",
            "id": "sg-00dbbd8b1723d53de",
            "region": "ca-central-1"
          },
          "dependencies": [
            "aws_vpc.demo-vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "app-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:836550977735:security-group/sg-0a3b7d48f68717ab0",
            "description": "Security group for application servers",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a3b7d48f68717ab0",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-00dbbd8b1723d53de"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "app-sg",
            "name_prefix": "",
            "owner_id": "836550977735",
            "region": "ca-central-1",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-09df53101262eeae1"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "836550977735",
            "id": "sg-0a3b7d48f68717ab0",
            "region": "ca-central-1"
          },
          "dependencies": [
            "aws_security_group.alb-sg",
            "aws_vpc.demo-vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "db-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:836550977735:security-group/sg-09f3b75efe3817aac",
            "description": "Security group for database servers",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09f3b75efe3817aac",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0a3b7d48f68717ab0"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "db-sg",
            "name_prefix": "",
            "owner_id": "836550977735",
            "region": "ca-central-1",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-09df53101262eeae1"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "836550977735",
            "id": "sg-09f3b75efe3817aac",
            "region": "ca-central-1"
          },
          "dependencies": [
            "aws_security_group.alb-sg",
            "aws_security_group.app-sg",
            "aws_vpc.demo-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-app-sn1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:836550977735:subnet/subnet-0174e1d9d9d55acd0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ca-central-1a",
            "availability_zone_id": "cac1-az1",
            "cidr_block": "10.1.64.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0174e1d9d9d55acd0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "836550977735",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ca-central-1",
            "tags": {
              "Name": "private-app-sn1"
            },
            "tags_all": {
              "Name": "private-app-sn1"
            },
            "vpc_id": "vpc-09df53101262eeae1"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "836550977735",
            "id": "subnet-0174e1d9d9d55acd0",
            "region": "ca-central-1"
          },
          "dependencies": [
            "aws_vpc.demo-vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-app-sn2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:836550977735:subnet/subnet-0589cf4d164c7dd9b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ca-central-1b",
            "availability_zone_id": "cac1-az2",
            "cidr_block": "10.1.96.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0589cf4d164c7dd9b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "836550977735",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ca-central-1",
            "tags": {
              "Name": "private-app-sn2"
            },
            "tags_all": {
              "Name": "private-app-sn2"
            },
            "vpc_id": "vpc-09df53101262eeae1"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "836550977735",
            "id": "subnet-0589cf4d164c7dd9b",
            "region": "ca-central-1"
          },
          "dependencies": [
            "aws_vpc.demo-vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-db-sn1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:836550977735:subnet/subnet-02cc14396fe6e4fad",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ca-central-1a",
            "availability_zone_id": "cac1-az1",
            "cidr_block": "10.1.128.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02cc14396fe6e4fad",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "836550977735",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ca-central-1",
            "tags": {
              "Name": "private-db-sn1"
            },
            "tags_all": {
              "Name": "private-db-sn1"
            },
            "vpc_id": "vpc-09df53101262eeae1"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "836550977735",
            "id": "subnet-02cc14396fe6e4fad",
            "region": "ca-central-1"
          },
          "dependencies": [
            "aws_vpc.demo-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-db-sn2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:836550977735:subnet/subnet-073dd4d56f3b6378f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ca-central-1b",
            "availability_zone_id": "cac1-az2",
            "cidr_block": "10.1.160.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-073dd4d56f3b6378f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "836550977735",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ca-central-1",
            "tags": {
              "Name": "private-db-sn2"
            },
            "tags_all": {
              "Name": "private-db-sn2"
            },
            "vpc_id": "vpc-09df53101262eeae1"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "836550977735",
            "id": "subnet-073dd4d56f3b6378f",
            "region": "ca-central-1"
          },
          "dependencies": [
            "aws_vpc.demo-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-alb-sn1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:836550977735:subnet/subnet-0129b8d2d2f6d7729",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ca-central-1a",
            "availability_zone_id": "cac1-az1",
            "cidr_block": "10.1.0.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0129b8d2d2f6d7729",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "836550977735",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ca-central-1",
            "tags": {
              "Name": "public-alb-sn1"
            },
            "tags_all": {
              "Name": "public-alb-sn1"
            },
            "vpc_id": "vpc-09df53101262eeae1"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "836550977735",
            "id": "subnet-0129b8d2d2f6d7729",
            "region": "ca-central-1"
          },
          "dependencies": [
            "aws_vpc.demo-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-alb-sn2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:836550977735:subnet/subnet-0d142f038b65d1e90",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ca-central-1b",
            "availability_zone_id": "cac1-az2",
            "cidr_block": "10.1.32.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d142f038b65d1e90",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "836550977735",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ca-central-1",
            "tags": {
              "Name": "public-alb-sn2"
            },
            "tags_all": {
              "Name": "public-alb-sn2"
            },
            "vpc_id": "vpc-09df53101262eeae1"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "836550977735",
            "id": "subnet-0d142f038b65d1e90",
            "region": "ca-central-1"
          },
          "dependencies": [
            "aws_vpc.demo-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "demo-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:836550977735:vpc/vpc-09df53101262eeae1",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.1.0.0/16",
            "default_network_acl_id": "acl-0b1244147533d4d90",
            "default_route_table_id": "rtb-0d7475ffaa766a50d",
            "default_security_group_id": "sg-096f0804ca13ac648",
            "dhcp_options_id": "dopt-04aa90ec6539b2539",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-09df53101262eeae1",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0d7475ffaa766a50d",
            "owner_id": "836550977735",
            "region": "ca-central-1",
            "tags": {
              "Name": "demo-vpc"
            },
            "tags_all": {
              "Name": "demo-vpc"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "836550977735",
            "id": "vpc-09df53101262eeae1",
            "region": "ca-central-1"
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}